k8s/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  labels:
    app: goapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: app
        image: sakurasherlocked/goapp:busybox
        ports:
        - containerPort: 8080
