k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goservice
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
